--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "bharathmb7.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bharathmb7.github.io/portfolio",
+  "homepage": "https://bharathmb7.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
